syntax = "proto3";

package user;

import "google/protobuf/empty.proto";

option go_package = "gofiber-skeleton/api/user";

message User {
  uint32 id = 1;
  string username = 2;
  string email = 3;
}

message GetUserRequest {
  uint32 id = 1;
}

message CreateUserRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message UpdateUserRequest {
  uint32 id = 1;
  string username = 2;
  string email = 3;
}

message DeleteUserRequest {
  uint32 id = 1;
}

service UserService {
  rpc GetUser(GetUserRequest) returns (User);
  rpc CreateUser(CreateUserRequest) returns (User);
  rpc UpdateUser(UpdateUserRequest) returns (User);
  rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty);
}
